--- a/index.html
+++ b/index.html
@@ -3,42 +3,43 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>Argjend's Portfolio</title>
+    <title>My Resume</title>
   </head>
   <body>
-    <h1>Argjend's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h1>Argjend Sokoli</h1>
+    <img src="cr7.jpg" height="200" alt="GOAT" />
+    <h2>Summary</h2>
+    <p>
+      Im a hardworking intellegent person and a very friendly person to those
+      who want to know me
+    </p>
     <hr />
-    <h3><a href="./public/movie-ranking.html">Movie Rankings</a></h3>
-    <img
-      src="./assets/images/movie-ranking.png"
-      height="200"
-      alt="movie-ranking"
-    />
-    <h3><a href="./public/birthday-invite.html">Birthday Invite</a></h3>
-    <img
-      src="./assets/images/birthday-invite.png"
-      height="200"
-      alt="birthday-invite"
-    />
-    <hr />
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <h2>Education</h2>
+    <ul>
+      <li>Shkolla Fillore "Edith Durham" (2006-2016)</li>
+      <li>Gjimnazi "Jeta e Re" (2016-2019)</li>
+      <li>Universiteti "Hasan Prishtina" (2019-Present)</li>
+    </ul><hr>
+    <h2>Work Experience</h2>
+    <h2>
+      <ul>
+        <li>
+          Grocery Store
+        </h2><p>Started 2013-Present</p><ul>
+            <li>Helping people with their grocery</li>
+            <li>Cleaning and restocking shelves</li>
+            <li>Dealing with the money at the counter</li>
+          </ul>
+        </li>
+      </ul><hr>
+    <h2>Skills</h2>
+    <hr>
+    <h2>Awards and Certification</h2><hr>
+    <h2>Other</h2>
+    <ul><li><a href="about.html">About Me</a></li>
+    <li><a href="contact.html">Contact Me</a></li></ul>
+    <footer>
+    <p>© Argjend Sokoli. All rights reserved.</p>
+    </footer>
   </body>
 </html>
-
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
